[package]
name = "wellington"
version = "0.0.1"
authors = ["Emanuel Geromin <egeromin@gmail.com>"]
description = "A lightweight blogging engine using markdown and supporting sidenotes"
license = "CC0-1.0"

[dependencies]
pulldown-cmark = "0.1.2"
regex = "1"
itertools = "0.7.3"
getopts = "0.2"
csv = "1"
serde = "1.0.79"
serde_derive = "1.0.79"
handlebars = "1.0.4"
chrono = "0.4"
url = "1.7.1"
serde_json = "1.0"
url_serde = "0.2.0"
